{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "433b7076-959d-49b3-9014-0705c2b1f182",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "29f4a009-6c59-4d85-acbc-a1db51d644df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightPunch",
                    "type": "Button",
                    "id": "a35f775f-6301-48bc-a8ec-1729f9f874c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightKick",
                    "type": "Button",
                    "id": "ba03dc73-aa0e-405b-9f24-e9893f5552a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MediumPunch",
                    "type": "Button",
                    "id": "9cd46ece-a8a7-4ed8-bac6-4842ed49d159",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MediumKick",
                    "type": "Button",
                    "id": "42ed3966-6093-4b39-b178-49f1a3f01652",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b43f9430-fde3-4d5c-8f2a-f557904c6ca8",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightKick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "171cccaf-3b78-41c4-a786-f6c5a299aae6",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MediumPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "819ebe83-73c7-4923-9566-a01d47b23267",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MediumKick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d61228ec-7385-4f93-a6d7-5740954ee33b",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e86443b3-1052-4f74-ac32-aea3a90fe732",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}